src/css/theme.css
@import url('http://getbootstrap.com/dist/css/bootstrap.css');
@import url('https://fonts.googleapis.com/css?family=Hind');


.hidden{
    visibility: hidden;
}
.visible{
    visibility: visible;
}
.fullHeight{
    height:100%;
}
.fullWidth{
    height:100%;
    width:100% !important;
}
.headerWrapper{
    height:35%;
    padding-bottom: 10px;
}
.largeLogo{
    position: fixed;
    background:transparent;
    height: 10vh;
    text-align: center;
    margin-top: 2vh;
    margin-left: 2vw;
}
.blackWhite{
    background:transparent;
    color:white;
    font-family:Hind;
    font-size: calc(50% + 4vw);
    margin:0;
}
.smallLogo{
    position: absolute !important;
    bottom: 0 !important;
    right: 2vw !important;
    margin-bottom:0;
}
.blocks{
    -webkit-transition: height 0.3s,width 0.3s; /* Safari */
    transition: height 0.3s, width 0.3s;
}
.blockWrapper{
    height:100%;
}
.transition{
    transition: visibility 0.3s;
    -webkit-transition: visibility 0.3s; /* Safari */
    -webkit-transition-delay: 0.3s; /* Safari */
    transition-delay: 0.3s;
} 
.block{
    height: 25%;
    margin: 0;
}
.blockRow{
    height: 50%;
    width: 100%;
    margin: 0;
}
.blockRowHover{
    height: 25%;
    width: 100%;
    margin: 0;
}
.blockRowHoverHover{
    height: 75%;
    width: 100%;
    margin: 0;
}
.blockCol{
    width:50%;
    height:100%;
    padding: 0;
}
.blockColHover{
    width:25%;
    height:100%;
    padding: 0;
}
.blockColHoverHover{
    width:75%;
    height:100%;
    padding: 0;
}
.one{
    color:white;
    background-color:#ffc800;
    text-align:center
}
.two{
    color:black;
    background-color: white;
    text-align:center;
}
.three{
    color:white;
    background-color: black;
    text-align:center;
}
.four{
    color:black;
    background-color: white;
    text-align:center
}
.header{
    font-size: calc(50% + 1.3vw);
    font-weight:bold;
    padding:0;
}
p,a,.header{
    font-family:Hind;
    margin-bottom: 4px;
}
a{
    color:white;
    margin-bottom:16px;
}
a:hover{
    color: #ffc800;
    text-decoration:none;
}
.black, .black:hover{
    color:black;
}
.textCol{
    font-size: calc(50% + 0.7vw);
    padding:0;
    height:100%;
    font-weight:bold;
}

.mapTopRow{
    height: 15%;
    width: 100%;
    margin: 0;
}
.mapBottomRow{
    height: 4%;
    width: 100%;
    margin: 0;
}
.mapMiddleRow{
    height: 81%;
    width: 100%;
    margin: 0;
}
.top{
    color:white;
    background-color:#ffc800;
    align-items: center;
    justify-content: flex-end;
}
.midLeft{
    color:black;
    background-color: white;
  flex-direction: column;
    align-items: center;
    justify-content: center;
}
.midRight{
    color:black;
    background-color: white;
    align-items: center;
    justify-content: center;
}
.bottom{
    color:white;
    background-color: black;
    justify-content: flex-end;
}

body{
    background-color: black;
    width: 100%;
    height: 100% !important;
}
#root{
    height:100% !important;
    width: 100% !important;
}
html{
    height:100% !important;
}

